app/styles/components/layout/text.scss
layout-text {

	width:100%;
	display:block;
	text-align:center;
	margin:0 auto 0 auto;

	@include media(max-width-750) {
		text-align:left;
	}

	h2, p {
		max-width:800px;
		margin-left:auto;
		margin-right:auto;
	}

	&[text-c] {

		text-align:center;

		h1, h2, h3, h4, h5, p {

			max-width:80%;
			margin-left:auto;
			margin-right:auto;

			@include media(max-width-750) {
				max-width:100%;
				text-align:left;
			}

		}

	}

	&[text-m] {

		text-align:center;

		h1, h2, h3, h4, h5 {

			max-width:80%;
			margin-left:auto;
			margin-right:auto;

			@include media(max-width-750) {
				max-width:100%;
				text-align:left;
			}

		}

		p {

			max-width:60%;
			margin-left:auto;
			margin-right:auto;

			@include media(max-width-750) {
				max-width:100%;
				text-align:left;
			}

		}

	}

	&[text-l] {

		text-align:left;

		h1, h2, h3, h4, h5, p {
			// max-width:80%;
			margin-left:0;
		}

	}

	&[text-r] {

		text-align:right;

		h1, h2, h3, h4, h5, p {
			max-width:80%;
			margin-right:0;
		}

	}

	&[text-f] {

		h1, h2, h3, h4, h5, p {
			max-width:100%;
		}

	}

}

